--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "core-js": "^2.4.1",
     "jquery": "^3.2.1",
     "rxjs": "^5.1.0",
+    "typescript-map": "0.0.4",
     "zone.js": "^0.8.4"
   },
   "devDependencies": {
