--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "bootstrap": "^3.3.7",
     "chart.js": "^2.6.0",
     "core-js": "^2.4.1",
+    "crypto-js": "^3.1.9-1",
     "jquery": "^3.2.1",
     "jspdf": "^1.3.3",
     "jspdf-autotable": "^2.3.2",
